--- a/app/views/admin.user.view.html
+++ b/app/views/admin.user.view.html
@@ -1,7 +1,26 @@
 <div class="grid-form">
 	<div class="grid-form1">
-		<h3 id="forms-horizontal">{{ user.firstName }} {{ user.lastName }}</h3>
-		<form class="form-horizontal" method="post" action="{{ server }}/admin/user/edit/{{ user.username }}">
+		<div class="float-left">
+			<h3 id="forms-horizontal">{{ user.firstName }} {{ user.lastName }}</h3>
+		</div>
+		<div class="float-right">
+			<div class="dropdown">
+				<a href="#" title="" class="btn btn-default" data-toggle="dropdown" aria-expanded="false">
+					{{ selectedLanguage }}
+					<i class="fa fa-chevron-down icon_8"></i>
+					<div class="ripple-wrapper"></div>
+				</a>
+				<ul class="dropdown-menu float-right">
+					{% for lang in languageList %}
+					<li>
+						<a href="?lang={{ lang }}">{{ lang }}</a>
+					</li>
+					{% endfor %}
+				</ul>
+			</div>
+		</div>
+		<div class="clearfix"></div>
+		<form class="form-horizontal" method="post" action="{{ server }}/admin/user/edit/{{ user.username }}?lang={{ selectedLanguage }}">
 			<div class="form-group">
 				<div class="picture-group">
 					{% if user.picture.length > 0 %}
@@ -20,11 +39,11 @@
 				</div>
 			</div>
 		</form>
-		<form class="form-horizontal">
+		<form class="form-horizontal" method="post" action="{{ server }}/admin/user/edit/{{ user.username }}?lang={{ selectedLanguage }}">
 			<div class="form-group">
 				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Username</label>
 				<div class="col-sm-10">
-					<h5>{{ user.username }}</h5>
+					<p class="form-control-static">{{ user.username }}</p>
 				</div>
 			</div>
 			<div class="form-group">
