--- a/app/views/admin.user.view.html
+++ b/app/views/admin.user.view.html
@@ -20,11 +20,11 @@
 			</div>
 		</div>
 		<div class="clearfix"></div>
-		<form class="form-horizontal" method="post" action="{{ server }}/admin/user/edit/{{ user.username }}?lang={{ selectedLanguage }}">
+		<form class="form-horizontal" enctype="multipart/form-data" method="post" action="{{ server }}/admin/user/upload/{{ user.username }}?lang={{ selectedLanguage }}" id="upload-picture-form" name="upload-picture-form">
 			<div class="form-group">
 				<div class="picture-group">
 					{% if user.picture.length > 0 %}
-						<img class="picture" src="{{ server }}/{{ user.picture }}" />
+						<img class="picture" id="head-picture-img" src="{{ server }}/{{ user.picture }}" />
 					{% else %}
 						<img class="picture" />
 					{% endif %}
@@ -33,7 +33,8 @@
 					<a href="#" class="btn btn-sm btn-info btn-upload">
 						<label class="upload">
 							Upload new picture
-							<input type="file" class="upload-picture" id="picture">
+							<input type="file" class="upload-picture" id="picture" name="picture" />
+							<button type="submit" style="display: none;">Upload</button>
 						</label>
 					</a>
 				</div>
@@ -41,7 +42,7 @@
 		</form>
 		<form class="form-horizontal" method="post" action="{{ server }}/admin/user/edit/{{ user.username }}?lang={{ selectedLanguage }}">
 			<div class="form-group">
-				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Username</label>
+				<label class="col-sm-2 control-label hor-form">Username</label>
 				<div class="col-sm-10">
 					<p class="form-control-static">{{ user.username }}</p>
 				</div>
@@ -49,62 +50,62 @@
 			<div class="form-group">
 				<label for="inputEmail3" class="col-sm-2 control-label hor-form">First Name</label>
 				<div class="col-sm-10">
-					<input type="text" class="form-control" id="first_name" placeholder="First Name" value="{{ user.firstName }}">
+					<input type="text" class="form-control" id="first_name" name="first_name" placeholder="First Name" value="{{ user.firstName }}">
 				</div>
 			</div>
 			<div class="form-group">
 				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Last Name</label>
 				<div class="col-sm-10">
-					<input type="text" class="form-control" id="last_name" placeholder="Last Name" value="{{ user.lastName }}">
+					<input type="text" class="form-control" id="last_name" name="last_name" placeholder="Last Name" value="{{ user.lastName }}">
 				</div>
 			</div>
 			<div class="form-group">
 				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Email</label>
 				<div class="col-sm-10">
-					<input type="email" class="form-control" id="email" placeholder="Email" value="{{ user.email }}">
+					<input type="email" class="form-control" id="email" name="email" placeholder="Email" value="{{ user.email }}">
 				</div>
 			</div>
 			<div class="form-group">
 				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Introduction</label>
 				<div class="col-sm-10">
-					<textarea id="introduction" class="form-control" placeholder="Introduce youself...">{{ user.introduction }}</textarea>
+					<textarea class="form-control" id="introduction" name="introduction" placeholder="Introduce youself...">{{ user.introduction }}</textarea>
 				</div>
 			</div>
 			<div class="form-group">
 				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Facebook</label>
 				<div class="col-sm-10">
-					<input type="text" class="form-control" id="facebook" placeholder="Facebook" value="{{ user.facebook }}">
+					<input type="text" class="form-control" id="facebook" name="facebook" placeholder="Facebook" value="{{ user.facebook }}">
 				</div>
 			</div>
 			<div class="form-group">
 				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Twitter</label>
 				<div class="col-sm-10">
-					<input type="text" class="form-control" id="twitter" placeholder="Twitter" value="{{ user.twitter }}">
+					<input type="text" class="form-control" id="twitter" name="twitter" placeholder="Twitter" value="{{ user.twitter }}">
 				</div>
 			</div>
 			<div class="form-group">
 				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Google</label>
 				<div class="col-sm-10">
-					<input type="text" class="form-control" id="google" placeholder="Google" value="{{ user.google }}">
+					<input type="text" class="form-control" id="google" name="google" placeholder="Google" value="{{ user.google }}">
 				</div>
 			</div>
 			<div class="form-group">
 				<label for="inputEmail3" class="col-sm-2 control-label hor-form">LinkedIn</label>
 				<div class="col-sm-10">
-					<input type="text" class="form-control" id="linkedin" placeholder="LinkedIn" value="{{ user.linkedin }}">
+					<input type="text" class="form-control" id="linkedin" name="linkedin" placeholder="LinkedIn" value="{{ user.linkedin }}">
 				</div>
 			</div>
 			<div class="form-group">
 				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Flickr</label>
 				<div class="col-sm-10">
-					<input type="text" class="form-control" id="flickr" placeholder="Flickr" value="{{ user.flickr }}">
+					<input type="text" class="form-control" id="flickr" name="flickr" placeholder="Flickr" value="{{ user.flickr }}">
 				</div>
 			</div>
 			<div class="form-group">
 				<label for="inputPassword3" class="col-sm-2 control-label hor-form">Change Password</label>
 				<div class="col-sm-10">
 					<input type="password" class="form-control" id="oldPassword" placeholder="Old Password"><br />
-					<input type="password" class="form-control" id="newPassword" placeholder="New Password"><br />
+					<input type="password" class="form-control" id="newPassword" name="newPassword" placeholder="New Password"><br />
 					<input type="password" class="form-control" id="repeatedPassword" placeholder="Repeated Password">
 				</div>
 			</div>
@@ -116,3 +117,39 @@
 		</form>
 	</div>
 </div>
+<script language="JavaScript">
+	$(':file').change(function(){
+		var file = this.files[0];
+		name = file.name;
+		size = file.size;
+		type = file.type;
+
+		if (file.name.length < 1) {
+		} else if (file.size > 1000000) {
+			alert("File is to big");
+		} else if (file.type != 'image/png' && file.type != 'image/jpg' && file.type != 'image/gif' && file.type != 'image/jpeg') {
+			alert("File doesnt match png, jpg or gif");
+		} else { 
+			var formData = new FormData(document.forms.namedItem("upload-picture-form"));
+			$.ajax({
+				url: '{{ server }}/admin/user/upload/{{ user.username }}?lang={{ selectedLanguage }}',
+				type: 'POST',
+				xhr: function() {
+					myXhr = $.ajaxSettings.xhr();
+					return myXhr;
+				},
+				success: function(data) {
+					// Reload the image
+					$("#head-picture-img").attr("src", '{{ server }}/uploads/{{ user.username }}?' + (new Date()).getTime())
+				},
+				error: function() {
+					console.error('upload error');
+				},
+				data: formData,
+				cache: false,
+				contentType: false,
+				processData: false
+			}, 'json');
+		}
+	});
+</script>
