Adding the path bar in admin management.

--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -82,7 +82,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			{% include './admin.navbar.html' %}
 			<div id="page-wrapper" class="gray-bg dashbard-1">
 				<div class="content-main">
-					{% include './admin.banner.html' %}
+					{% include './admin.path.html' %}
 					{% include contentPage %}
 					{% include 'admin.copy.html' %}
 				</div>
