--- a/app/views/admin.menu.view.html
+++ b/app/views/admin.menu.view.html
@@ -20,7 +20,7 @@
 			</div>
 		</div>
 		<div class="clearfix"></div>
-		<form class="form-horizontal" method="post" action="{{ server }}/admin/menu/edit/{{ menu.key }}?lang={{ selectedLanguage }}">
+		<form class="form-horizontal" method="post" action="{{ server }}/{{ language }}/admin/menu/edit/{{ menu.key }}?lang={{ selectedLanguage }}">
 			<div class="form-group">
 				<label class="col-sm-2 control-label hor-form">Key</label>
 				<div class="col-sm-10">
