--- a/app/views/admin.user.view.html
+++ b/app/views/admin.user.view.html
@@ -48,6 +48,16 @@
 				</div>
 			</div>
 			<div class="form-group">
+				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Privilege</label>
+				<div class="col-sm-10">
+					<select class="col-sm-2 control-label hor-form" id="privilege" name="privilege">
+						{% for i in Array(99) %}
+							<option value="{{loop.index}}">{{loop.index}}</option>
+						{% endfor %}
+					</select>
+				</div>
+			</div>
+			<div class="form-group">
 				<label for="inputEmail3" class="col-sm-2 control-label hor-form">First Name</label>
 				<div class="col-sm-10">
 					<input type="text" class="form-control" id="first_name" name="first_name" placeholder="First Name" value="{{ user.firstName }}">
