--- a/app/views/admin.user.view.html
+++ b/app/views/admin.user.view.html
@@ -48,7 +48,7 @@
 				</div>
 			</div>
 			<div class="form-group">
-				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Privilege</label>
+				<label class="col-sm-2 control-label hor-form">Privilege</label>
 				<div class="col-sm-10">
 					<select class="col-sm-2 control-label hor-form" id="privilege" name="privilege">
 						{% for i in Array(99) %}
@@ -58,65 +58,75 @@
 				</div>
 			</div>
 			<div class="form-group">
-				<label for="inputEmail3" class="col-sm-2 control-label hor-form">First Name</label>
+				<label class="col-sm-2 control-label hor-form">First Name</label>
 				<div class="col-sm-10">
 					<input type="text" class="form-control" id="first_name" name="first_name" placeholder="First Name" value="{{ user.firstName }}">
 				</div>
 			</div>
 			<div class="form-group">
-				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Last Name</label>
+				<label class="col-sm-2 control-label hor-form">Last Name</label>
 				<div class="col-sm-10">
 					<input type="text" class="form-control" id="last_name" name="last_name" placeholder="Last Name" value="{{ user.lastName }}">
 				</div>
 			</div>
 			<div class="form-group">
-				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Email</label>
+				<label class="col-sm-2 control-label hor-form">Email</label>
 				<div class="col-sm-10">
 					<input type="email" class="form-control" id="email" name="email" placeholder="Email" value="{{ user.email }}">
 				</div>
 			</div>
 			<div class="form-group">
-				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Introduction</label>
+				<label class="col-sm-2 control-label hor-form">Introduction</label>
 				<div class="col-sm-10">
 					<textarea class="form-control" id="introduction" name="introduction" placeholder="Introduce youself...">{{ user.introduction }}</textarea>
 				</div>
 			</div>
 			<div class="form-group">
-				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Facebook</label>
+				<label class="col-sm-2 control-label hor-form">Facebook</label>
 				<div class="col-sm-10">
 					<input type="text" class="form-control" id="facebook" name="facebook" placeholder="Facebook" value="{{ user.facebook }}">
 				</div>
 			</div>
 			<div class="form-group">
-				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Twitter</label>
+				<label class="col-sm-2 control-label hor-form">Twitter</label>
 				<div class="col-sm-10">
 					<input type="text" class="form-control" id="twitter" name="twitter" placeholder="Twitter" value="{{ user.twitter }}">
 				</div>
 			</div>
 			<div class="form-group">
-				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Google</label>
+				<label class="col-sm-2 control-label hor-form">Google</label>
 				<div class="col-sm-10">
 					<input type="text" class="form-control" id="google" name="google" placeholder="Google" value="{{ user.google }}">
 				</div>
 			</div>
 			<div class="form-group">
-				<label for="inputEmail3" class="col-sm-2 control-label hor-form">LinkedIn</label>
+				<label class="col-sm-2 control-label hor-form">LinkedIn</label>
 				<div class="col-sm-10">
 					<input type="text" class="form-control" id="linkedin" name="linkedin" placeholder="LinkedIn" value="{{ user.linkedin }}">
 				</div>
 			</div>
 			<div class="form-group">
-				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Flickr</label>
+				<label class="col-sm-2 control-label hor-form">Flickr</label>
 				<div class="col-sm-10">
 					<input type="text" class="form-control" id="flickr" name="flickr" placeholder="Flickr" value="{{ user.flickr }}">
 				</div>
 			</div>
 			<div class="form-group">
-				<label for="inputPassword3" class="col-sm-2 control-label hor-form">Change Password</label>
+				<label class="col-sm-2 control-label hor-form">Change Password</label>
 				<div class="col-sm-10">
-					<input type="password" class="form-control" id="oldPassword" placeholder="Old Password"><br />
-					<input type="password" class="form-control" id="newPassword" name="newPassword" placeholder="New Password"><br />
-					<input type="password" class="form-control" id="repeatedPassword" placeholder="Repeated Password">
+
+				</div>
+			</div>
+			<div id="password-group" class="form-group">
+				<label class="col-sm-2 control-label hor-form">New Password</label>
+				<div class="col-sm-10">
+					<input type="password" class="form-control" id="password" name="newPassword" placeholder="New Password">
+				</div>
+			</div>
+			<div id="repeated-password-group" class="form-group">
+				<label class="col-sm-2 control-label hor-form">Repeated New Password</label>
+				<div class="col-sm-10">
+					<input type="password" class="form-control" id="repeated_password" placeholder="Repeated Password">
 				</div>
 			</div>
 			<div class="form-group">
@@ -129,37 +139,144 @@
 </div>
 <script language="JavaScript">
 	$(':file').change(function(){
-		var file = this.files[0];
-		name = file.name;
-		size = file.size;
-		type = file.type;
+		var file = this.files[0]
+		name = file.name
+		size = file.size
+		type = file.type
 
 		if (file.name.length < 1) {
 		} else if (file.size > 1000000) {
-			alert("File is to big");
+			alert("File is to big")
 		} else if (file.type != 'image/png' && file.type != 'image/jpg' && file.type != 'image/gif' && file.type != 'image/jpeg') {
-			alert("File doesnt match png, jpg or gif");
+			alert("File doesnt match png, jpg or gif")
 		} else { 
-			var formData = new FormData(document.forms.namedItem("upload-picture-form"));
+			var formData = new FormData(document.forms.namedItem("upload-picture-form"))
 			$.ajax({
 				url: '{{ server }}/admin/user/upload/{{ user.username }}?lang={{ selectedLanguage }}',
 				type: 'POST',
 				xhr: function() {
 					myXhr = $.ajaxSettings.xhr();
-					return myXhr;
+					return myXhr
 				},
 				success: function(data) {
 					// Reload the image
 					$("#head-picture-img").attr("src", '{{ server }}/uploads/{{ user.username }}?' + (new Date()).getTime())
 				},
 				error: function() {
-					console.error('upload error');
+					console.error('upload error')
 				},
 				data: formData,
 				cache: false,
 				contentType: false,
 				processData: false
-			}, 'json');
+			}, 'json')
 		}
-	});
+	})
+
+	var LOADING_CLASS = 'fa fa-fw fa-spin fa-spinner'
+	var NORMAL_CLASS = 'form-group'
+	var VALIDATE_CLASS = 'form-group has-success'
+	var ERROR_CLASS = 'form-group has-error'
+	var passwordvalid = false
+	$('#password').keyup(function() {
+		passwordvalid = false
+		var password = $('#password').val()
+		if (password.length == 0) {
+			passwordvalid = true
+			$('#password-group').attr('class', NORMAL_CLASS)
+			checkData()
+			return
+		}
+
+		if (verifyPassword(password, 6, 16)) {
+			$('#password-group').attr('class', NORMAL_CLASS)
+		} else {
+			$('#password-group').attr('class', ERROR_CLASS)
+			checkData()
+			return
+		}
+
+		var repeated_password = $('#repeated_password').val()
+		if (password === repeated_password) {
+			passwordvalid = true
+			setValidate('#password-group', passwordvalid)
+		}
+		checkData()
+	})
+
+	$('#repeated_password').keyup(function() {
+		passwordvalid = false
+		var password = $('#password').val()
+		if (verifyPassword(password, 6, 16)) {
+			$('#repeated-password-group').attr('class', NORMAL_CLASS)
+		} else {
+			$('#repeated-password-group').attr('class', ERROR_CLASS)
+			return
+		}
+
+		var repeated_password = $('#repeated_password').val()
+		if (password === repeated_password) {
+			passwordvalid = true
+			setValidate('#password-group', passwordvalid)
+		}
+		checkData()
+	})
+
+	function setLoading(id, loading) {
+		if (loading) {
+			$(id).attr('class', LOADING_CLASS)
+		} else {
+			$(id).attr('class', '')
+		}
+	}
+	function setValidate(id, valid) {
+		if (valid) {
+			$(id).attr('class', VALIDATE_CLASS)
+		} else {
+			$(id).attr('class', ERROR_CLASS)
+		}
+	}
+	function checkData() {
+		if (passwordvalid) {
+			$(':submit').prop('disabled', false)
+		} else {
+			$(':submit').prop('disabled', true)
+		}
+		setValidate('#repeated-password-group', passwordvalid)
+	}
+
+	function isEmpty(data) {
+		if (data === null || data === undefined) {
+			return true
+		}
+		if (data.length === 0) {
+			return true
+		}
+		return false
+	}
+
+	function checkLength(data, min, max) {
+		if (data === null || data === undefined || typeof data === 'object') {
+			return false
+		}
+		if (data.length >= min && data.length <= max) {
+			return true
+		}
+		return false
+	}
+
+	function verifyPassword(data, min, max) {
+		// Checking empty
+		if (this.isEmpty(data)) {
+			return false
+		}
+
+		// Checking length
+		if (!this.checkLength(data, min, max)) {
+			return false
+		}
+
+		// Checking special characters
+		return /^[0-9a-zA-Z_\-\+~!@#$%\^&*=?,.]*$/.test(data)
+	}
 </script>
