Fix the bug of wrong variable name.

--- a/app/views/admin.menus.html
+++ b/app/views/admin.menus.html
@@ -40,7 +40,7 @@
 										{{ menu.link }}
 									</td>
 									<td>
-										{% if menu.taget.length > 0 %}
+										{% if menu.target.length > 0 %}
 											<span class="fam">{{ menu.target }}</span>
 										{% endif %}
 									</td>
