Adding delete portfolio API.

--- a/app/views/admin.portfolio.html
+++ b/app/views/admin.portfolio.html
@@ -65,7 +65,7 @@
 										{{ portfolio.role }}
 									</td>
 									<td >
-										<a href="#" onclick="deleteMenu('{{ portfolio.key }}');"><i class="fa delete fa-trash-o"></i></a>
+										<a href="#" onclick="deletePortfolio('{{ portfolio.key }}');"><i class="fa delete fa-trash-o"></i></a>
 									</td>
 								</tr>
 							{% endfor %}
