Adding insert and edit experience API.

--- a/app/views/admin.experience.add.html
+++ b/app/views/admin.experience.add.html
@@ -29,7 +29,7 @@
 			<div class="form-group">
 				<label class="col-sm-2 control-label hor-form">End Working Date</label>
 				<div class="col-sm-10">
-					<input type="date" class="form-control1 ng-invalid ng-invalid-required" id="endWorkingDate" name="end_working_date" ng-model="model.date" required>
+					<input type="date" class="form-control1 ng-invalid ng-invalid-required" id="endWorkingDate" name="end_working_date" ng-model="model.date">
 					<label>
 						<input type="checkbox" id="stillHere" name="still_here" checked>
 						Still here
