Adding language management.

--- a/app/views/admin.menu.html
+++ b/app/views/admin.menu.html
@@ -1,5 +1,5 @@
 <div class="sidebar-nav navbar-collapse">
-	<ul class="nav" id="side-menu">
+	<ul class="nav in" id="side-menu">
 		<li>
 		    <a href="{{ server }}/{{ language }}/admin" class="hvr-bounce-to-right"><i class="fa fa-dashboard nav_icon "></i><span class="nav-label">{{ T.dashboards }}</span> </a>
 		</li>
@@ -19,7 +19,12 @@
 			<a href="{{ server }}/{{ language }}/admin/experience" class="hvr-bounce-to-right"><i class="fa fa-file-text-o nav_icon"></i> <span class="nav-label">{{ T.experience }}</span> </a>
 		</li>
 		<li>
-			<a href="{{ server }}/{{ language }}/admin/settings" class="hvr-bounce-to-right"><i class="fa fa-cog nav_icon"></i> <span class="nav-label">{{ T.settings }}</span> </a>
+			<a href="#" class="hvr-bounce-to-right"><i class="fa fa-cog nav_icon"></i> <span class="nav-label">{{ T.settings }}</span> <span class="fa arrow"></span></a>
+			<ul class="nav nav-second-level collapse">
+				<li><a href="{{ server }}/{{ language }}/admin/settings/language" class="hvr-bounce-to-right"><i class="fa fa-file-o nav_icon"></i>{{ T.language }}</a></li>
+				<li><a href="{{ server }}/{{ language }}/admin/settings/template" class="hvr-bounce-to-right"><i class="fa fa-desktop nav_icon"></i>{{ T.template }}</a></li>
+				<li><a href="{{ server }}/{{ language }}/admin/settings/system" class="hvr-bounce-to-right"><i class="fa fa-th nav_icon"></i>{{ T.system }}</a></li>
+			</ul>
 		</li>
 	</ul>
 </div>
