--- a/app/views/admin.user.add.html
+++ b/app/views/admin.user.add.html
@@ -36,7 +36,7 @@
 			<div class="form-group">
 				<label class="col-sm-2 control-label hor-form">First Name</label>
 				<div class="col-sm-10">
-					<input type="text" class="form-control1" id="first_name" name="first_name" placeholder="First Name">
+					<input type="text" class="form-control1" id="first_name" name="first_name" placeholder="First Name" required>
 				</div>
 			</div>
 			<div class="form-group">
