--- a/app/views/admin.user.view.html
+++ b/app/views/admin.user.view.html
@@ -60,7 +60,7 @@
 			<div class="form-group">
 				<label class="col-sm-2 control-label hor-form">First Name</label>
 				<div class="col-sm-10">
-					<input type="text" class="form-control" id="first_name" name="first_name" placeholder="First Name" value="{{ user.firstName }}">
+					<input type="text" class="form-control" id="first_name" name="first_name" placeholder="First Name" value="{{ user.firstName }}" required>
 				</div>
 			</div>
 			<div class="form-group">
