--- a/app/views/admin.user.view.html
+++ b/app/views/admin.user.view.html
@@ -50,11 +50,15 @@
 			<div class="form-group">
 				<label class="col-sm-2 control-label hor-form">Privilege</label>
 				<div class="col-sm-10">
-					<select class="col-sm-2 control-label hor-form" id="privilege" name="privilege">
-						{% for i in Array(99) %}
-							<option value="{{loop.index}}" {% if user.privilege === loop.index %} selected {% endif %}>{{loop.index}}</option>
-						{% endfor %}
-					</select>
+					{% if user.isAdmin %}
+						<p class="form-control-static">{{ user.privilege }}</p>
+					{% else %}
+						<select class="col-sm-2 control-label hor-form" id="privilege" name="privilege">
+							{% for i in Array(99) %}
+								<option value="{{loop.index}}" {% if user.privilege === loop.index %} selected {% endif %}>{{loop.index}}</option>
+							{% endfor %}
+						</select>
+					{% endif %}
 				</div>
 			</div>
 			<div class="form-group">
