Adding logout API.

--- a/app/views/admin.navbar.html
+++ b/app/views/admin.navbar.html
@@ -32,7 +32,7 @@
 						<img class="sm-head-pic" src="{{ server }}/{{ loginUser.picture }}">
 					</a>
 					<ul class="dropdown-menu " role="menu">
-						<li><a href="logout"><i class="fa fa-sign-in"></i>{{ T.logout }}</a></li>
+						<li><a href="{{ server }}/{{ language }}/auth/logout"><i class="fa fa-sign-in"></i>{{ T.logout }}</a></li>
 					</ul>
 				</li>
 			</ul>
