--- a/app/views/admin.notification.html
+++ b/app/views/admin.notification.html
@@ -1,4 +1,6 @@
 <li class="dropdown at-drop">
+	<!-- Hiding the notification icon -->
+	<!--
 	<a href="#" class="dropdown-toggle dropdown-at " data-toggle="dropdown"><i class="fa fa-globe"></i> <span class="number">5</span></a>
 	<ul class="dropdown-menu menu1 " role="menu">
 		<li>
@@ -65,4 +67,5 @@
 			<a href="#" class="view">View all messages</a>
 		</li>
 	</ul>
+	-->
 </li>
