--- a/app/views/admin.experience.view.html
+++ b/app/views/admin.experience.view.html
@@ -32,7 +32,7 @@
 				<div class="upload-block">
 					<a href="#" class="btn btn-sm btn-info btn-upload">
 						<label class="upload">
-							Upload new picture
+							{{ T.uploadNewPicture }}
 							<input type="file" class="upload-picture" id="picture" name="picture" />
 							<button type="submit" style="display: none;">Upload</button>
 						</label>
@@ -42,42 +42,42 @@
 		</form>
 		<form class="form-horizontal" method="post" action="{{ server }}/{{ language }}/admin/experience/edit/{{ experience.key }}?lang={{ selectedLanguage }}&p={{ page }}">
 			<div class="form-group">
-				<label class="col-sm-2 control-label hor-form">Company Name</label>
+				<label class="col-sm-2 control-label hor-form">{{ T.companyName }}</label>
 				<div class="col-sm-10">
-					<input type="text" class="form-control" id="companyName" name="company_name" placeholder="Company Name" value="{{ experience.companyName }}">
+					<input type="text" class="form-control" id="companyName" name="company_name" placeholder="{{ T.companyName }}" value="{{ experience.companyName }}">
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="col-sm-2 control-label hor-form">Role</label>
+				<label class="col-sm-2 control-label hor-form">{{ T.role }}</label>
 				<div class="col-sm-10">
-					<input type="type" class="form-control" id="role" name="role" placeholder="Role in Project" value="{{ experience.role }}">
+					<input type="type" class="form-control" id="role" name="role" placeholder="{{ T.roleInThisProject }}" value="{{ experience.role }}">
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="col-sm-2 control-label hor-form">Description</label>
+				<label class="col-sm-2 control-label hor-form">{{ T.description }}</label>
 				<div class="col-sm-10">
-					<textarea class="form-control" id="description" name="description" placeholder="Description...">{{ experience.description }}</textarea>
+					<textarea class="form-control" id="description" name="description" placeholder="{{ T.description }}...">{{ experience.description }}</textarea>
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="col-sm-2 control-label hor-form">startWorkingDate</label>
+				<label class="col-sm-2 control-label hor-form">{{ T.startWorkingDate }}</label>
 				<div class="col-sm-10">
 					<input type="date" class="form-control1 ng-invalid ng-invalid-required" id="startWorkingDate" name="start_working_date" ng-model="model.date" value="{{ experience.startWorkingDate }}" required>
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="col-sm-2 control-label hor-form">endWorkingDate</label>
+				<label class="col-sm-2 control-label hor-form">{{ T.endWorkingDate }}</label>
 				<div class="col-sm-10">
 					<input type="date" class="form-control1 ng-invalid ng-invalid-required" id="endWorkingDate" name="end_working_date" ng-model="model.date" value="{{ experience.endWorkingDate }}">
 					<label>
 						<input type="checkbox" id="stillHere" name="still_here" {% if experience.stillHere %} checked {% endif %}>
-						Still here
+						{{ T.stillHere }}
 					</label>
 				</div>
 			</div>
 			<div class="form-group">
 				<div class="col-sm-offset-2 col-sm-10">
-					<button type="submit" class="btn btn-primary">Save</button>
+					<button type="submit" class="btn btn-primary">{{ T.save }}</button>
 				</div>
 			</div>
 		</form>
