--- a/app/views/admin.menu.view.html
+++ b/app/views/admin.menu.view.html
@@ -28,7 +28,7 @@
 				</div>
 			</div>
 			<div class="form-group">
-				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Order</label>
+				<label for="inputEmail3" class="col-sm-2 control-label hor-form">{{ T.order }}</label>
 				<div class="col-sm-10">
 					<select class="col-sm-2 control-label hor-form" id="order" name="order">
 						{% for i in Array(10) %}
@@ -38,26 +38,26 @@
 				</div>
 			</div>
 			<div class="form-group">
-				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Name</label>
+				<label for="inputEmail3" class="col-sm-2 control-label hor-form">{{ T.name }}</label>
 				<div class="col-sm-10">
-					<input type="text" class="form-control" id="name" name="name" placeholder="Name" value="{{ menu.name }}">
+					<input type="text" class="form-control" id="name" name="name" placeholder="{{ T.name }}" value="{{ menu.name }}">
 				</div>
 			</div>
 			<div class="form-group">
-				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Link</label>
+				<label for="inputEmail3" class="col-sm-2 control-label hor-form">{{ T.link }}</label>
 				<div class="col-sm-10">
-					<input type="text" class="form-control" id="link" name="link" placeholder="Last Name" value="{{ menu.link }}">
+					<input type="text" class="form-control" id="link" name="link" placeholder="{{ T.link }}" value="{{ menu.link }}">
 				</div>
 			</div>
 			<div class="form-group">
-				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Target</label>
+				<label for="inputEmail3" class="col-sm-2 control-label hor-form">{{ T.target }}</label>
 				<div class="col-sm-10">
-					<input type="text" class="form-control" id="target" name="target" placeholder="Target" value="{{ menu.target }}">
+					<input type="text" class="form-control" id="target" name="target" placeholder="_black" value="{{ menu.target }}">
 				</div>
 			</div>
 			<div class="form-group">
 				<div class="col-sm-offset-2 col-sm-10">
-					<button type="submit" class="btn btn-primary">Save</button>
+					<button type="submit" class="btn btn-primary">{{ T.save }}</button>
 				</div>
 			</div>
 		</form>
