--- a/app/views/admin.portfolio.html
+++ b/app/views/admin.portfolio.html
@@ -6,7 +6,7 @@
 					<div class="mail-toolbar clearfix">
 						<div class="float-left">
 							<div class="btn-group">
-								<a class="btn btn-default" href="portfolio/add">New</a>
+								<a class="btn btn-default" href="portfolio/add">{{ T.new }}</a>
 							</div>
 						</div>
 						<div class="float-right">
