--- a/app/views/admin.settings.language.add.html
+++ b/app/views/admin.settings.language.add.html
@@ -3,7 +3,7 @@
 		<h3 id="forms-example">{{ T.addNewLanguage }}</h3>
 		<form class="form-horizontal" id="form1" method="post" action="{{ server }}/{{ language }}/admin/settings/language/add">
 			<div class="form-group">
-				<label class="col-sm-2 control-label hor-form">Order</label>
+				<label class="col-sm-2 control-label hor-form">{{ T.order }}</label>
 				<div class="col-sm-10">
 					<select class="col-sm-2 control-label hor-form" id="order" name="order">
 						{% for i in Array(100) %}
@@ -13,9 +13,9 @@
 				</div>
 			</div>
 			<div id="name-group" class="form-group">
-				<label class="col-sm-2 control-label hor-form">Name</label>
+				<label class="col-sm-2 control-label hor-form">{{ T.language }}</label>
 				<div class="col-sm-10">
-					<input type="text" class="form-control" id="name" name="name" placeholder="name" required>
+					<input type="text" class="form-control" id="name" name="name" placeholder="{{ T.language }}" required>
 				</div>
 			</div>
 			<div class="form-group">
