--- a/app/views/admin.settings.language.view.html
+++ b/app/views/admin.settings.language.view.html
@@ -11,7 +11,7 @@
 		<div class="clearfix"></div>
 		<form class="form-horizontal" method="post" action="{{ server }}/{{ language }}/admin/settings/language/edit/{{ settingsLanguage.id }}">
 			<div class="form-group">
-				<label class="col-sm-2 control-label hor-form">Order</label>
+				<label class="col-sm-2 control-label hor-form">{{ T.order }}</label>
 				<div class="col-sm-10">
 					<select class="col-sm-2 control-label hor-form" id="order" name="order">
 						{% for i in Array(100) %}
@@ -22,7 +22,7 @@
 			</div>
 			<div class="form-group">
 				<div class="col-sm-offset-2 col-sm-10">
-					<button type="submit" class="btn btn-primary">Save</button>
+					<button type="submit" class="btn btn-primary">{{ T.save }}</button>
 				</div>
 			</div>
 		</form>
