--- a/app/views/admin.skill.view.html
+++ b/app/views/admin.skill.view.html
@@ -22,7 +22,7 @@
 		<div class="clearfix"></div>
 		<form class="form-horizontal" method="post" action="{{ server }}/{{ language }}/admin/skill/edit/{{ skill.key }}?lang={{ selectedLanguage }}">
 			<div class="form-group">
-				<label class="col-sm-2 control-label hor-form">Order</label>
+				<label class="col-sm-2 control-label hor-form">{{ T.order }}</label>
 				<div class="col-sm-10">
 					<select class="col-sm-2 control-label hor-form" id="order" name="order">
 						{% for i in Array(20) %}
@@ -32,32 +32,32 @@
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="col-sm-2 control-label hor-form">Name</label>
+				<label class="col-sm-2 control-label hor-form">{{ T.name }}</label>
 				<div class="col-sm-10">
-					<input type="text" class="form-control" id="name" name="name" placeholder="Name" value="{{ skill.name }}">
+					<input type="text" class="form-control" id="name" name="name" placeholder="{{ T.name }}" value="{{ skill.name }}">
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="col-sm-2 control-label hor-form">Percent</label>
+				<label class="col-sm-2 control-label hor-form">{{ T.percent }}</label>
 				<div class="col-sm-10">
-					<input type="text" class="form-control" id="percent" name="percent" placeholder="Percent (%)" value="{{ skill.percent }}">
+					<input type="text" class="form-control" id="percent" name="percent" placeholder="{{ T.percent }} (%)" value="{{ skill.percent }}">
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="col-sm-2 control-label hor-form">Color</label>
+				<label class="col-sm-2 control-label hor-form">{{ T.color }}</label>
 				<div class="col-sm-10">
-					<input type="text" class="form-control" id="color" name="color" placeholder="Color" value="{{ skill.color }}">
+					<input type="text" class="form-control" id="color" name="color" placeholder="{{ T.color }}" value="{{ skill.color }}">
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="col-sm-2 control-label hor-form">Animation Time</label>
+				<label class="col-sm-2 control-label hor-form">{{ T.animationTime }}</label>
 				<div class="col-sm-10">
-					<input type="text" class="form-control" id="animateTime" name="animate_time" placeholder="Animation Time" value="{{ skill.animateTime }}">
+					<input type="text" class="form-control" id="animateTime" name="animate_time" placeholder="{{ T.animationTime }}" value="{{ skill.animateTime }}">
 				</div>
 			</div>
 			<div class="form-group">
 				<div class="col-sm-offset-2 col-sm-10">
-					<button type="submit" class="btn btn-primary">Save</button>
+					<button type="submit" class="btn btn-primary">{{ T.save }}</button>
 				</div>
 			</div>
 		</form>
