Fix the bug of can not change the password.

--- a/app/views/admin.user.view.html
+++ b/app/views/admin.user.view.html
@@ -124,7 +124,7 @@
 			<div id="password-group" class="form-group">
 				<label class="col-sm-2 control-label hor-form">{{ T.newPassword }}</label>
 				<div class="col-sm-10">
-					<input type="password" class="form-control" id="password" name="newPassword" placeholder="{{ T.newPassword }}">
+					<input type="password" class="form-control" id="password" name="password" placeholder="{{ T.newPassword }}">
 				</div>
 			</div>
 			<div id="repeated-password-group" class="form-group">
