Combine the data into settings.

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -6,7 +6,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>{{ websiteName }} | {{ T.login }}</title>
+		<title>{{ settings.websiteName }} | {{ T.login }}</title>
 		<link href="../css/login.style.css" rel="stylesheet" type="text/css" media="all"/>
 		<!-- Custom Theme files -->
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
