--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>{{ websiteName }} | {{ T.adminManagementSystem }}</title>
+		<title>{{ settings.websiteName }} | {{ T.adminManagementSystem }}</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="keywords" content="Minimal Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
