--- a/app/views/admin.navbar.html
+++ b/app/views/admin.navbar.html
@@ -6,7 +6,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-		<h1> <a class="navbar-brand" href="/">{{ websiteName }}</a></h1>         
+		<h1> <a class="navbar-brand" href="/">{{ settings.websiteName }}</a></h1>         
 	</div>
 	<div class=" border-bottom">
 		<!--
