--- a/app/views/default/index.html
+++ b/app/views/default/index.html
@@ -17,7 +17,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
 		<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
-		<script src="js/jquery.min.js"></script>
+		<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 	</head>
 	<body>
 		<div style="background: url({{ settings.backgroundImage }}) no-repeat; background-size: 100%; background-size: cover;" class="content" id="home">
